# ruralneighbour-k8s

./: .gitignore  DATABASE_FIXES_COMPLETE.md  DATABASE_MIGRATION_COMPLETE.md  DATABASE_MIGRATION_STATUS.md  DEPLOYMENT.md  DEPLOYMENT_STATUS_REPORT.md  README.md  SPRINT8_COMPLETION_SUMMARY.md  docker-compose.yaml  requirements.txt
services/: README.md  export_requirements.bash  pyproject.toml  test.db  test_payment.db  test_request_service.db
services/auth-service/: README.md  __init__.py  requirements.txt  test.db
services/auth-service/alembic/: env.py
services/auth-service/app/: main.py
services/auth-service/tests/: conftest.py  test_auth.py  test_events.py
services/content-service/: Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  requirements.txt  run.py  test_content.db
services/content-service/alembic/: env.py
services/content-service/app/: main.py
services/content-service/tests/: __init__.py  conftest.py  test_content_service.py  test_news_endpoints.py  test_retention_service.py
services/docs/migration/: ALEMBIC_MIGRATION_COMPLETE.md  ALEMBIC_MIGRATION_GUIDE.md  FILE_ORGANIZATION_SUMMARY.md  QUICK_START_MIGRATIONS.md
services/investment-service/: Dockerfile  README.md  pytest.ini  requirements.txt
services/investment-service/alembic/: env.py
services/investment-service/app/: main.py
services/investment-service/tests/: test_investments_endpoints.py
services/location-service/: Dockerfile  README.md  TESTING.md  __init__.py  requirements.txt  test_location.db  test_structure.py
services/location-service/alembic/: env.py
services/location-service/app/: main.py
services/location-service/tests/: __init__.py  conftest.py  test_addresses_locations_api.py  test_database_integration.py  test_location.py  test_saved_locations_api.py
services/notification-service/: Dockerfile  README.md  __init__.py  requirements.txt  run.py  test_notification.db
services/notification-service/alembic/: env.py
services/payment-service/: Dockerfile  README.md  __init__.py  requirements.txt  test_payment.db
services/rating-service/: Dockerfile  README.md  alembic.ini  requirements.txt  test_api.py
services/request-service/: Dockerfile  README.md  __init__.py  alembic.ini  requirements.txt  test_request_service.db
services/safety-service/: Dockerfile  __init__.py  alembic.ini  pytest.ini  requirements.txt
services/scripts/: docker-entrypoint.sh  execute_migrations.sh  export_requirements.bash  run_migrations_k8s.sh  verify_migrations.sh
services/user-service/: __init__.py  requirements.txt  test.db
(+323 files in other folders)
